# falsify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: synthetic_demo.py
src/falsify/: __init__.py  core.py
tests/: test_core.py
